# Ingot

./: .gitignore  .pylintrc  README.md  alembic.ini  outreach-agent-plan.md  pyproject.toml
.github/workflows/: pylint.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-foundation-and-core-infrastructure/: .continue-here.md  01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-core-pipeline-scout-through-writer/: .continue-here.md  02-01-PLAN.md  02-02-PLAN.md  02-03-PLAN.md  02-04-PLAN.md  02-05-PLAN.md  02-05-SUMMARY.md  02-06-PLAN.md  02-07-PLAN.md  02-CONTEXT.md  02-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
alembic/: env.py
alembic/versions/: 149adcd94073_initial_schema.py  a3f2e1d4b5c6_add_leadcontact_table.py
src/ingot/: __init__.py  dispatcher.py  http_client.py  logging_config.py
src/ingot/agents/: __init__.py  analyst.py  base.py  (+9 more)
tests/: conftest.py  test_agents_base.py  test_agents_exceptions.py  test_agents_imports.py  test_agents_pipeline.py  test_agents_registry.py  test_cli_setup_noninteractive.py  test_config_crypto.py  test_config_manager.py  test_config_schema.py  test_db_engine.py  test_db_repositories.py  test_dispatcher.py  test_http_client.py  test_llm_client.py  test_llm_fallback.py  test_llm_schemas.py  test_logging_config.py  test_orchestrator.py
(+20 files in other folders)
